# streamlit-lightweight-charts

./: .gitignore  .pre-commit-config.yaml  BAND_SERIES_README.md  COMPOSITE_CHARTS_GUIDE.md  ENHANCED_FEATURES_GUIDE.md  IMPROVEMENTS_SUMMARY.md  MANIFEST.in  MIGRATION_GUIDE.md  Makefile  PYPI_RELEASE_GUIDE.md  README.md  README_ENHANCED.md  REFACTORING_SUMMARY.md  SPECIALIZED_CHARTS_GUIDE.md  TEST_REFACTORING_SUMMARY.md  TIME_HANDLING_GUIDE.md  TOOLTIP_README.md  fix_test_validation.py  lint.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run_comprehensive_tests.py  run_tests_parallel.py  setup.py  test_all_series_price_scale_id.py  test_band_new_structure.py  test_enhanced_api.py  test_fitcontent_debug.py  test_price_scale_id_fix.py  test_rectangle_fix.py
docs/: AUTO_SIZE_GUIDE.md  ERROR_HANDLING.md  MULTI_PANE_CHARTS.md  UPDATE_METHODS_GUIDE.md
examples/: AdvancedMultiPaneSync.py  AutoSizingExample.py  MultiPaneChartsFromCSV.py  QUICK_REFERENCE.md  README.md  RangeSwitcherExample.py  SimpleMultiPaneExample.py  SimpleRangeSwitcher.py  SimpleTradeDrawing.py  TradeDrawingExample.py  __init__.py  advanced_multi_pane_sync.py  annotation_structure_test.py  area_chart.py  auto_size_example.py  background_series_example.py  band_series_example.py  bar_chart.py  baseline_chart.py  candlestick_chart.py  comprehensive_error_test.py  dataSamples.py  data_toggling.py  error_handling_test.py  fit_content_test.py  histogram_chart.py  legend_example.py  line_chart.py  method_chaining_demo.py  multi_pane_chart.py  multi_pane_charts_with_pandas.py  overlaid_areas_chart.py  pane_heights_example.py  price_volume_chart.py  price_volume_line_chart.py  range_switcher_example.py  series_dataframe_example.py  signal_example.py  signal_series_example.py  simple_multi_pane_example.py  (+8 more)
examples/advanced_features/: README.md  multi_pane_legends_example.py
examples/area_charts/: basic_area_chart.py  customized_area_chart.py  interactive_area_chart.py  multi_area_chart.py
examples/bar_charts/: README.md  basic_bar_chart.py  customized_bar_chart.py
examples/base_series/: README.md  advanced_features.py  basic_series_usage.py  data_handling.py  markers_and_price_lines.py
examples/baseline_charts/: README.md  basic_baseline_chart.py  customized_baseline_chart.py
examples/candlestick_charts/: README.md  basic_candlestick_chart.py  brownian_motion_trades_chart.py  customized_candlestick_chart.py  trade_visualization_options_example.py
examples/histogram_charts/: README.md  basic_histogram_chart.py  customized_histogram_chart.py
examples/line_charts/: README.md  line_chart_advanced.py  line_chart_basic.py  line_chart_dataframe.py  line_chart_launcher.py  line_chart_with_markers.py  line_chart_with_price_lines.py
examples/tests/: README.md  (+2 more)
streamlit_lightweight_charts/: __init__.py  dataSamples.py  rendering.py
streamlit_lightweight_charts_pro/: __init__.py  component.py  logging_config.py
tests/: README.md  REORGANIZATION_SUMMARY.md  TEST_SUITE_ANALYSIS.md  conftest.py  pytest.ini  run_tests.py
(+267 files in other folders)
