[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-lightweight-charts"
version = "2.0.0"
description = "Streamlit wrapper for TradingView's lightweight-charts"
authors = [{ name = "Nand Kapadia", email = "nand.kapadia@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "streamlit>=1.0"
]

[tool.setuptools.packages.find]
where = ["."]